k3s/components/blogo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogo
  namespace: default
  labels:
    app: blogo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogo
  template:
    metadata:
      name: blogo
      labels:
        app: blogo
    spec:
      containers:
        - name: blogo
          image: sadrasamadi/blogo
          imagePullPolicy: Always
          command: [ "sh", "-c", "./main serve" ]
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
