k3s/components/blogo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogo
  namespace: default
spec:
  selector:
    app: blogo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
