k3s/components/blogo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blogo
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`default.blogo.shuttle.sadra.xyz`)
      kind: Rule
      services:
        - name: blogo
          port: 80
  tls:
    certResolver: letsencrypt
